@startuml Domain_Model
!theme plain
hide empty methods
title Hair Booking System — Domain Model

' Define the classes with their attributes

class "User (Django Built-in)" as User {
  + id : Integer
  + username : String
  + email : String
  + password : String
  + is_staff : Boolean
  + is_superuser : Boolean
}

class Service {
  + id : Integer
  + name : String
  + description : Text
  + price : Decimal(8, 2)
  + duration_minutes : Integer
  + is_active : Boolean
}

class Appointment {
  + id : Integer
  + date : Date
  + start_time : Time
  + end_time : Time
  + phone_number : String
  + email : String
  + special_requests : Text
  + status : String {'pending', 'confirmed', 'cancelled'}
  + created_at : DateTime
}

class StaffDaySchedule {
  + id : Integer
  + weekday : Integer {0=Mon ... 6=Sun}
  + is_working : Boolean
  + opens_at : Time
  + closes_at : Time
}

' Define relationships between classes

User "1" -- "0..*" Appointment : "books >"
Service "1" -- "0..*" Appointment : "is booked for >"
User "1" -- "0..7" StaffDaySchedule : "has schedule (if is_staff) >"

@enduml
